--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,6 +1,9 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
-    %}
-    <form method="POST">
+{% extends "base.html" %} 
+{% block title %}
+<title>Login</title>
+{% endblock %} 
+{% block content%}
+    <form method="POST" style="margin: 20px auto; max-width:1000px; width: 100%;">
       <h3 align="center">Login</h3>
       <div class="form-group">
         <label for="email">Email Address</label>
