--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+<link rel="stylesheet" href="{{ url_for('static' , filename='css/style.css') }}">
+    {% block title %}
+    <title>Webpage Design</title>
+    {% endblock %}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/999ca2bb93.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>{% block title %}{% endblock %}</title>
+    <script src="https://kit.fontawesome.com/999ca2bb93.js" crossorigin="anonymous"  ></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -29,31 +30,43 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/home">Home</a>
+            <a class="nav-item nav-link" href="{{ url_for('views.home')}}">Home </a>
+            <a class="nav-item nav-link" href="{{ url_for('views.about')}}">About</a>
+            <a class="nav-item nav-link" href="{{ url_for('views.contact')}}">Contact</a>
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="/logout">Logout</a>
+            <a class="nav-item nav-link" href="{{ url_for('views.create_post')}}">Create Post</a>
+            <a class="nav-item nav-link" href="{{ url_for('auth.logout')}}">Logout</a>
             {% else %}
-            <a class="nav-item nav-link" href="/login">Login</a>
-            <a class="nav-item nav-link" href="/sign-up">Sign Up</a>
+            <a class="nav-item nav-link" href="{{ url_for('auth.login')}}">Login</a>
+            <a class="nav-item nav-link" href="{{ url_for('auth.sign_up')}}">Sign Up</a>
             {% endif %}
+            
+
           </div>
         </div>
       </div>
     </nav>
-    {% with messages = get_flashed_messages(with_categories=true) %} {% if
-    messages %} {% for category, message in messages %} {% if category ==
-    'error' %}
-    <div class="alert alert-danger alter-dismissible fade show" role="alert">
-      {{ message }}
-      <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    </div>
-    {% else %}
-    <div class="alert alert-success alter-dismissible fade show" role="alert">
-      {{ message }}
-      <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    </div>
-    {% endif %} {% endfor %} {% endif %} {% endwith %}
-    <div class="container">{% block content %}{% endblock %}</div>
+    {% with messages = get_flashed_messages(with_categories=true) %} 
+      {% if messages %} 
+        {% for category, message in messages %} 
+          {% if category =='error' %}
+            <div class="alert alert-danger alter-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            </div>
+          {% else %}
+            <div class="alert alert-success alter-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            </div>
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+
+    {% block content %}
+        
+    {% endblock %}
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -63,5 +76,6 @@
       type="text/javascript"
       src="{{ url_for('static', filename='index.js')}}"
     ></script>
+    {% block scripts %}{% endblock %}
   </body>
 </html>
