--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -7,7 +7,129 @@
     <link rel="stylesheet" href="{{ url_for('static' , filename='css/style.css') }}">
 </head>
 <body>
-
+    {% extends "base.html" %}
+    {% block title %}
+    <title>Home</title>
+    <link rel="stylesheet" href="{{ url_for('static' , filename='css/style.css') }}">
+    {% endblock %}
+    
+    {% block content %}
+    <div class="main">
+        <div id="posts" style="margin: 20px auto; max-width:1000px; width: 100%;">
+            {% for post in posts %}
+            <div class="card border-dark">
+              <div class="card-header d-flex justify-content-between align-items-center">
+                <a href="#">{{post.user.username}}</a>
+                {% if  user.is_authenticated %}
+                <div>
+                
+                  <span id="likes-count-{{post.id}}">
+                  {{ post.likes|length }}</span> 
+                  {% if user.id in post.likes|map(attribute="author")|list %}
+                  <i
+                    class="fas fa-thumbs-up"
+                    id="like-button-{{post.id}}"
+                    onclick="like({{post.id}})"
+                  ></i>
+                  {% else %}
+                  <i
+                    class="far fa-thumbs-up"
+                    id="like-button-{{post.id}}"
+                    onclick="like({{post.id}})"
+                  ></i>
+                  {% endif %} 
+                  {% if user.id == post.author %}
+                  <div class="btn-group">
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-primary dropdown-toggle"
+                      data-bs-toggle="dropdown"
+                    ></button>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <a href="/delete-post/{{post.id}}" class="dropdown-item"
+                          >Delete</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                  {% endif %}
+                </div>
+                {% endif %}
+              </div>
+              <div class="card-body">
+                <div class="card-text">{{post.text}}</div>
+                <br />
+                <div class="collapse" id="comments-{{post.id}}">
+                  <div class="card">
+                    <div class="card-body" id="comments-expanded-{{post.id}}">
+                      {% for comment in post.comments %}
+                      <div class="d-flex justify-content-between align-items-center">
+                        <div>
+                          <a href="#"
+                            >{{comment.user.username}}</a
+                          >: {{comment.text}}
+                        </div>
+                        <div>
+                          <small class="text-muted"> {{comment.date_created}}</small>
+                          {% if user.id == comment.author or user.id == post.author %}
+                          <div class="btn-group">
+                            <button
+                              type="button"
+                              class="btn btn-sm btn-primary dropdown-toggle"
+                              data-bs-toggle="dropdown"
+                            ></button>
+                            <ul class="dropdown-menu">
+                              <li>
+                                <a
+                                  href="/delete-comment/{{comment.id}}"
+                                  class="dropdown-item"
+                                  >Delete</a
+                                >
+                              </li>
+                            </ul>
+                          </div>
+                          {% endif %}
+                        </div>
+                      </div>
+                      {% endfor %}
+                    </div>
+                  </div>
+                </div>
+                <p class="card-text">
+                  {% if post.comments|length > 0 %}
+                  <a data-bs-toggle="collapse" href="#comments-{{post.id}}" role="button">
+                    <small>View {{post.comments|length}} Comments</small>
+                  </a>
+                  {% else %}
+                  <small class="text-muted">No Comments</small>
+                  {% endif %}
+                </p>
+                <form
+                  class="input-group mb-3"
+                  method="POST"
+                  action="/create-comment/{{post.id}}"
+                >
+                  <input
+                    type="text"
+                    id="text"
+                    name="text"
+                    class="form-control"
+                    placeholder="Comment something!"
+                  />
+                  <button type="submit" class="btn btn-primary">Comment</button>
+                </form>
+              </div>
+              <div class="card-footer text-muted">{{post.date_created}}</div>
+            </div>
+            <br/ > {% endfor %}
+          </div>
+    </div>
+    {% endblock %}
+    
+    {% block scripts %}
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    {% endblock %}
     <div class="main">
         <div class="navbar">
             <div class="icon">
