--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -9,14 +9,14 @@
 {% block content %}
 <body>
     <section class="about">
-        <div class="main">
-            <img src="{{ url_for('static' ,filename='img/cool_img.png ' ) }}"/>
-            <div class="about-test">  
-              <h1> Contact Me!</h1>
+        <div class="main" >
+            <img src="{{ url_for('static' ,filename='img/cool_img.png ' ) }}" width="200px" height="200px" style="border-radius: 50%;"/>
+            <div class="about-test" style="margin-left:20px ;">  
+              <h1>Contact me!</h1>
                <h5>Backend <span>Developer</span></h5>
                <p>  I am a back-end web developer. <br> I can build and maintain the mechanisms that process data and perform actions on websites. <br>I can create and maintain technology at the back-end of a website(the server, database and application). <br>I love to use python language for my codes and Am proud to be a student at Altschool African.</p>
                 
-               <a href ="mailto: olamiedeomitogun8@gmail.com" class="emailme">let's Talk</a>
+               <a href ="mailto: olamiedeomitogun8@gmail.com" class="emailme" style="text-decoration:none ;">let's Talk</a>
             </div>
         </div>
     </section>
