--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -114,7 +114,8 @@
           </div>
           <div class="card-footer text-muted">{{post.date_created}}</div>
         </div>
-        <br/ > {% endfor %}
+        <br/ > 
+        {% endfor %}
       </div>
 </div>
 {% endblock %}
