--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -2,17 +2,19 @@
     margin: 0;
     padding: 0;
 }
-
-.main{
+/* body{
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(190, 5, 5, 0.5)50%), url(1.jpg);
+} */
+/* .main{
     width: 100%;
     background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(190, 5, 5, 0.5)50%), url(1.jpg);
     background-position: center;
     background-size: cover;
-    height: 100vh;
-}
+    height: 100%;
+} */
 
 .navbar{
-    width: 1200px;
+    width: 100%;
     height: 75px;
     margin: auto;
     z-index: 1;
