--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -28,7 +28,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbar">
+        <dv class="collapse navbar-collapse" id="navbar">i
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="{{ url_for('views.home')}}">Home </a>
             <a class="nav-item nav-link" href="{{ url_for('views.about')}}">About</a>
