--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -8,7 +8,7 @@
       <div class="form-group">
         <label for="email">Email Address</label>
         <input
-          type="text"
+          type="email"
           id="email"
           name="email"
           class="form-control"
